--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_audio_recorder: ^0.5.5
   firebase_storage: ^7.0.0
   path_provider: ^1.6.27
+  flutter_reaction_button: ^1.0.7+3
+  
   
 
 dev_dependencies:
